--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -38,7 +38,7 @@
   --color-primary: rgb(255, 255, 255);
   --color-secondary: rgb(223, 223, 223);
   --color-secondaryTransparent: rgba(233, 233, 233, .5);
-  --color-tertiary: rgb(197, 197, 197);
+  --color-tertiary: rgb(212, 211, 211);
   --color-quaternary: rgb(184, 184, 184);
   --color-quinary: rgb(160, 160, 160);
   --color-primaryText: rgb(0, 0, 0);
@@ -55,21 +55,21 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: rgba(241, 241, 241, 0.059);
+  background: rgb(255, 187, 0);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.49);
+  background: rgb(124, 91, 0);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(85, 85, 85, 0.565);
+  background: rgb(82, 60, 0);
 }
 
 ::-webkit-scrollbar-thumb:active {
-  background-color: rgba(46, 46, 46, 0.705);
+  background: rgb(106, 78, 0);
 }
 
 input {
